--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-data-grid": "^8.1.0",
+    "@reactour/tour": "^3.8.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^4.7.0",
     "bootstrap": "^5.3.5",
+    "lucide-react": "^0.509.0",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.9",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
+    "reactour": "^1.19.4",
     "recharts": "^2.15.3",
     "sass": "^1.87.0",
     "web-vitals": "^2.1.4"
