--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^4.7.0",
     "bootstrap": "^5.3.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
