--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "apexcharts": "^3.45.2",
+    "@turf/bbox": "^7.2.0",
+    "apexcharts": "^4.7.0",
     "bootstrap": "^5.3.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.330.0",
+    "mapbox-gl": "^3.12.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.1",
